2007-07-13  Scott Smedley  <ss(at)aao(dot)gov(dot)au>

	* groupedCommands.html:
	fix cut&paste error.

	* Makefile.am:
	Allow make to check build dependencies (of .html files) properly.

2007-07-12  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* groupedCommands.html:
	* util/cmds.txt:
	* allCommands.html:
	add EchoFuncDefinition to static html files

2007-07-12  Renato Caldas  <seventhguardian@gmail.com>

	* commands/Makefile.am:
	break COMMANDS into multiple lines

	* commands/EchoFuncDefinition.xml:
	* commands/Makefile.am:
	* fvwm/userFunctions.xml:
	documented new command EchoFuncDefinition

2007-07-07  Simon Griph  <simon(at)griph(dot)se>

	* fvwm/conditionals.xml:
	clarified that comma is the prefered condition separator

2007-07-04  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* Makefile.am:
	applied fixes by hadu

2007-06-21  Scott Smedley  <ss(at)aao(dot)gov(dot)au>

	* fvwm.xsl:
	fix links to sections of "man" page. (fvwm.man.html)

2007-06-16  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* commands/AddButtonStyle.xml:
	* commands/AddTitleStyle.xml:
	* commands/AddToDecor.xml:
	* commands/AddToFunc.xml:
	* commands/AddToMenu.xml:
	* commands/All.xml:
	* commands/AnimatedMove.xml:
	* commands/Any.xml:
	* commands/Asterix.xml:
	* commands/Beep.xml:
	* commands/BorderStyle.xml:
	* commands/Break.xml:
	* commands/BugOpts.xml:
	* commands/BusyCursor.xml:
	* commands/ButtonState.xml:
	* commands/ButtonStyle.xml:
	* commands/ChangeDecor.xml:
	* commands/ChangeMenuStyle.xml:
	* commands/CleanupColorsets.xml:
	* commands/ClickTime.xml:
	* commands/ColorLimit.xml:
	* commands/ColormapFocus.xml:
	* commands/Colorset.xml:
	* commands/CopyMenuStyle.xml:
	* commands/Current.xml:
	* commands/CursorMove.xml:
	* commands/CursorStyle.xml:
	* commands/DefaultColors.xml:
	* commands/DefaultColorset.xml:
	* commands/DefaultFont.xml:
	* commands/DefaultIcon.xml:
	* commands/DefaultLayers.xml:
	* commands/Delete.xml:
	* commands/Deschedule.xml: