@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" ?>
+<!-- $Id$ -->
 <!DOCTYPE part PUBLIC "-//OASIS//DTD DocBook XML V4.4//EN"
   "../docbook-xml/docbookx.dtd"
 [
@@ -10,10 +11,8 @@
 <title>EchoFuncDefinition</title>
 
 <cmdsynopsis>
-	<command>EchoFuncDefinition</command
-	><arg choice='plain'
-		><replaceable>function</replaceable
-	></arg>
+	<command>EchoFuncDefinition</command>
+	<arg choice='plain'><replaceable>function</replaceable></arg>
 </cmdsynopsis>
 
 <para>The
@@ -27,10 +26,5 @@ to
 It is useful to find out how fvwm handles quoting and for
 debugging functions
 .</para>
-
-<programlisting>
-Echo StartFunc
-</programlisting>
-
 
 </section>
